--- a/src/components/react/controls/Radio/Radio.module.scss
+++ b/src/components/react/controls/Radio/Radio.module.scss
@@ -22,7 +22,7 @@
   }
 
   &--valid.radio--checked {
-    border-color: var(--evg-color-positive);
+    border-color: var(--evg-state-positive);
   }
 
   &__input {
