--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -64,12 +64,12 @@ p {
 }
 
 a {
-  color: var(--evg-skin-link-color);
+  color: var(--evg-theme-link-color);
   font-weight: var(--link-font-weight);
-  text-decoration: var(--evg-skin-link-text-decoration);
+  text-decoration: var(--evg-theme-link-text-decoration);
 
   &:hover {
-    text-decoration: var(--evg-skin-link-text-decoration-hover);
+    text-decoration: var(--evg-theme-link-text-decoration-hover);
   }
 }
 
