--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -33,22 +33,16 @@ $colors: (
   'violet': var(--evg-color-violet),
   'white': var(--evg-color-white),
   'black': var(--evg-color-black),
-  'body': var(--evg-color-body),
-  'body-muted': var(--evg-color-body-muted),
-  'background': var(--evg-color-background),
-  'background-muted': var(--evg-color-background-muted),
-  'accent': var(--evg-color-accent),
-  'link': var(--evg-color-link),
-  'neutral': var(--evg-color-neutral),
-  'neutral-light': var(--evg-color-neutral-light),
-  'positive': var(--evg-color-positive),
-  'positive-light': var(--evg-color-positive-light),
-  'negative': var(--evg-color-negative),
-  'negative-light': var(--evg-color-negative-light),
-  'no-stream': var(--evg-color-no-stream),
-  'dry-stream': var(--evg-color-dry-stream),
-  'residual-stream': var(--evg-color-residual-stream),
-  'food-stream': var(--evg-color-food-stream),
-  'garden-stream': var(--evg-color-garden-stream),
-  'organic-stream': var(--evg-color-organic-stream),
+  'neutral': var(--evg-state-neutral),
+  'neutral-light': var(--evg-state-neutral-light),
+  'positive': var(--evg-state-positive),
+  'positive-light': var(--evg-state-positive-light),
+  'negative': var(--evg-state-negative),
+  'negative-light': var(--evg-state-negative-light),
+  'no-stream': var(--evg-stream-none),
+  'dry-stream': var(--evg-stream-dry),
+  'residual-stream': var(--evg-stream-residual),
+  'food-stream': var(--evg-stream-food),
+  'garden-stream': var(--evg-stream-garden),
+  'organic-stream': var(--evg-stream-organic),
 );
