--- a/src/components/react/canvas/Card/Card.module.scss
+++ b/src/components/react/canvas/Card/Card.module.scss
@@ -1,10 +1,10 @@
 .card {
-  --card-border-color: var(--evg-skin-border-color);
+  --card-border-color: var(--evg-theme-border-color);
 
-  background: var(--evg-skin-background);
+  background: var(--evg-theme-background);
   border: 1px solid transparent;
   border-radius: var(--card-border-radius);
-  color: var(--evg-skin-color);
+  color: var(--evg-theme-color);
   display: block;
   transition:
     background-color var(--evg-transition),
@@ -89,14 +89,14 @@
   }
 
   &--disabled {
-    background: var(--evg-skin-background-muted);
+    background: var(--evg-theme-background-muted);
     pointer-events: none;
   }
 
   &--muted,
   &__body--muted {
-    --card-border-color: var(--evg-skin-border-color-muted);
-    background: var(--evg-skin-background-muted);
+    --card-border-color: var(--evg-theme-border-color-muted);
+    background: var(--evg-theme-background-muted);
   }
 
   &:has(.card__body--muted) {
