--- a/src/components/react/composition/Sticky/Sticky.module.scss
+++ b/src/components/react/composition/Sticky/Sticky.module.scss
@@ -1,5 +1,3 @@
-@use '~@wrap.ngo/tokens/dist/breakpoint';
-
 .sticky {
   position: sticky;
   z-index: 1;
@@ -8,12 +6,12 @@
     max-height: none;
     position: static;
 
-    @media screen and (min-width: breakpoint.$evg-breakpoint-md) {
+    @media (width >= 600px) {
       position: sticky;
     }
   }
 
-  @media screen and (min-width: breakpoint.$evg-breakpoint-xl) {
+  @media (width > 1024px) {
     max-height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
