--- a/src/components/react/content/Eyebrow/Eyebrow.module.scss
+++ b/src/components/react/content/Eyebrow/Eyebrow.module.scss
@@ -1,5 +1,5 @@
 .eyebrow {
-  color: var(--evg-color-body-muted);
+  color: var(--evg-theme-color-muted);
   font-family: var(--evg-font-family-heading);
   font-size: var(--evg-font-size-base);
   text-transform: uppercase;
