--- a/src/components/react/content/HelpText/HelpText.module.scss
+++ b/src/components/react/content/HelpText/HelpText.module.scss
@@ -1,15 +1,15 @@
 .help-text {
-  background-color: var(--evg-color-neutral-light);
-  color: var(--evg-color-body);
+  background-color: var(--evg-state-neutral-light);
+  color: var(--evg-theme-color);
   font-size: var(--evg-font-size-sm);
   margin-top: var(--evg-spacing-sm);
   padding: var(--evg-spacing-sm) var(--evg-spacing-md);
 
   &--positive {
-    background: var(--evg-color-positive-light);
+    background: var(--evg-state-positive-light);
   }
 
   &--negative {
-    background: var(--evg-color-negative-light);
+    background: var(--evg-state-negative-light);
   }
 }
