--- a/src/components/react/content/LoadingButton/LoadingButton.module.scss
+++ b/src/components/react/content/LoadingButton/LoadingButton.module.scss
@@ -1,4 +1,3 @@
-@use '~@wrap.ngo/tokens/dist/breakpoint';
 @use '../../../../styles/mixins/loading';
 @use '../../../../styles/mixins/button';
 
@@ -25,7 +24,7 @@
       display: block;
       width: 100%;
 
-      @media (min-width: breakpoint.$evg-breakpoint-md) {
+      @media (width >= 600px) {
         display: inline-block;
         width: auto;
       }
