--- a/src/styles/base/_scaffolding.scss
+++ b/src/styles/base/_scaffolding.scss
@@ -12,8 +12,8 @@ body {
 }
 
 body {
-  background: var(--evg-skin-background-muted);
-  color: var(--evg-skin-color);
+  background: var(--evg-theme-background-muted);
+  color: var(--evg-theme-color);
   margin: 0;
   min-width: 20em;
   padding: 0;
@@ -27,5 +27,5 @@ img {
 
 hr {
   border: 0 none;
-  border-bottom: 1px solid var(--evg-skin-border-color);
+  border-bottom: 1px solid var(--evg-theme-border-color);
 }
