--- a/src/styles/mixins/theme.scss
+++ b/src/styles/mixins/theme.scss
@@ -1,16 +1,16 @@
 @mixin theme($type) {
-  --evg-skin-background: var(--evg-skin-background-#{$type});
-  --evg-skin-background-muted: var(--evg-skin-background-muted-#{$type});
-  --evg-skin-border-color: var(--evg-skin-border-color-#{$type});
-  --evg-skin-border-color-muted: var(--evg-skin-border-color-muted-#{$type});
-  --evg-skin-color: var(--evg-skin-color-#{$type});
-  --evg-skin-color-muted: var(--evg-skin-color-muted-#{$type});
-  --evg-skin-heading-color: var(--evg-skin-heading-color-#{$type});
-  --evg-skin-link-color: var(--evg-skin-link-color-#{$type});
-  --evg-skin-link-text-decoration: var(
-    --evg-skin-link-text-decoration-#{$type}
+  --evg-theme-background: var(--evg-theme-background-#{$type});
+  --evg-theme-background-muted: var(--evg-theme-background-muted-#{$type});
+  --evg-theme-border-color: var(--evg-theme-border-color-#{$type});
+  --evg-theme-border-color-muted: var(--evg-theme-border-color-muted-#{$type});
+  --evg-theme-color: var(--evg-theme-color-#{$type});
+  --evg-theme-color-muted: var(--evg-theme-color-muted-#{$type});
+  --evg-theme-heading-color: var(--evg-theme-heading-color-#{$type});
+  --evg-theme-link-color: var(--evg-theme-link-color-#{$type});
+  --evg-theme-link-text-decoration: var(
+    --evg-theme-link-text-decoration-#{$type}
   );
-  --evg-skin-link-text-decoration-hover: var(
-    --evg-skin-link-text-decoration-hover-#{$type}
+  --evg-theme-link-text-decoration-hover: var(
+    --evg-theme-link-text-decoration-hover-#{$type}
   );
 }
