--- a/src/styles/mixins/title.scss
+++ b/src/styles/mixins/title.scss
@@ -2,8 +2,7 @@
   color: var(--evg-theme-heading-color);
   font-weight: var(--heading-font-weight, var(--evg-font-weight-bold));
   line-height: var(--evg-font-line-height-sm);
-  margin-bottom: var(--evg-spacing-xs);
-  margin-top: 0;
+  margin: 0;
 
   b,
   strong {
