--- a/src/styles/utilities/text.scss
+++ b/src/styles/utilities/text.scss
@@ -53,4 +53,14 @@
       }
     }
   }
+
+  &-wrap {
+    &-balance {
+      text-wrap: balance;
+    }
+
+    &-pretty {
+      text-wrap: pretty;
+    }
+  }
 }
