--- a/src/styles/variables/font.scss
+++ b/src/styles/variables/font.scss
@@ -1,16 +1,18 @@
 $sizes: (
-  'base': var(--evg-font-size-base),
-  'xs': var(--evg-font-size-xs),
-  'sm': var(--evg-font-size-sm),
-  'md': var(--evg-font-size-md),
-  'lg': var(--evg-font-size-lg),
-  'xl': var(--evg-font-size-xl),
-  'h1': var(--evg-font-size-h1),
-  'h2': var(--evg-font-size-h2),
-  'h3': var(--evg-font-size-h3),
-  'h4': var(--evg-font-size-h4),
-  'h5': var(--evg-font-size-h5),
-  'h6': var(--evg-font-size-h6),
+  'display-lg': var(--evg-font-size-display-lg),
+  'display-md': var(--evg-font-size-display-md),
+  'display-sm': var(--evg-font-size-display-sm),
+  'heading-xl': var(--evg-font-size-heading-xl),
+  'heading-lg': var(--evg-font-size-heading-lg),
+  'heading-md': var(--evg-font-size-heading-md),
+  'heading-sm': var(--evg-font-size-heading-sm),
+  'heading-xs': var(--evg-font-size-heading-xs),
+  'heading-xxs': var(--evg-font-size-heading-xxs),
+  'body-xl': var(--evg-font-size-body-xl),
+  'body-lg': var(--evg-font-size-body-lg),
+  'body-md': var(--evg-font-size-body-md),
+  'body-sm': var(--evg-font-size-body-sm),
+  'body-xs': var(--evg-font-size-body-xs),
 );
 
 $weights: (
