--- a/src/styles/mixins/title.scss
+++ b/src/styles/mixins/title.scss
@@ -1,6 +1,6 @@
 @mixin title {
   color: var(--evg-theme-heading-color);
-  font-weight: var(--heading-font-weight, var(--evg-font-weight-bold));
+  font-weight: var(--evg-font-weight-bold);
   line-height: var(--evg-font-line-height-sm);
   margin: 0;
 
