refactor: use our tokens table

--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -24,11 +24,10 @@ $colors: (
   'rose-50': var(--evg-color-rose-50),
   'rose-25': var(--evg-color-rose-25),
   'cloud': var(--evg-color-cloud),
+  'steel': var(--evg-color-steel),
   'coal': var(--evg-color-coal),
-  'neutral': var(--evg-state-neutral),
-  'neutral-light': var(--evg-state-neutral-light),
-  'positive': var(--evg-state-positive),
-  'positive-light': var(--evg-state-positive-light),
-  'negative': var(--evg-state-negative),
-  'negative-light': var(--evg-state-negative-light),
+  'lemon': var(--evg-color-lemon),
+  'orange': var(--evg-color-orange),
+  'violet': var(--evg-color-violet),
+  'lilac': var(--evg-color-lilac),
 );
