--- a/src/docs/foundations/tokens/blocks/Tokens/Tokens.module.scss
+++ b/src/docs/foundations/tokens/blocks/Tokens/Tokens.module.scss
@@ -1,54 +1,56 @@
 .tokens {
-  border-collapse: collapse;
-  line-height: 1.25;
-  margin-block: var(--evg-spacing-md);
+  line-height: 1.5;
+  margin-block: var(--evg-spacing-16);
   width: 100%;
+
+  th {
+    text-align: left;
+  }
 
   th,
   td {
-    border: 1px solid var(--evg-color-sky-50);
-    font-size: var(--evg-font-size-sm);
-    padding: var(--evg-spacing-sm);
     width: 33.33%;
-  }
-
-  th {
-    background-color: color-mix(
-      in srgb,
-      var(--evg-color-sky-25) 50%,
-      transparent 50%
-    );
-    text-align: left;
   }
 
   td {
     min-height: 24px;
   }
 
-  tr:nth-child(even) td {
-    background-color: color-mix(
-      in srgb,
-      var(--evg-color-sky-25) 25%,
-      transparent 75%
-    );
+  a {
+    color: var(--evg-theme-link-color);
+  }
+
+  &__preview-cell {
+    &--color,
+    &--state {
+      background-image: linear-gradient(
+          to bottom,
+          var(--token-preview),
+          var(--token-preview)
+        ),
+        repeating-linear-gradient(-45deg, #ccc, #ccc 1px, #fff 1px, #fff 16px);
+      padding: 0 !important;
+    }
   }
 
   &__preview {
-    &--color {
-      background: var(--token-preview);
-      height: 1rem;
-    }
-
     &--font-family {
-      font-family: var(--token-preview);
+      font-family: var(--token-preview) !important;
     }
 
     &--font-size {
-      font-size: var(--token-preview);
+      font-size: var(--token-preview) !important;
+      line-height: 1.2;
+    }
+
+    &--line-height {
+      background: #f001;
+      height: calc(var(--token-preview) * 1em);
+      line-height: var(--token-preview) !important;
     }
 
     &--font-weight {
-      font-weight: var(--token-preview);
+      font-weight: var(--token-preview) !important;
     }
 
     &--radius {
@@ -61,8 +63,8 @@
 
     &--shadow {
       box-shadow: var(--token-preview);
-      height: 1rem;
-      width: 4rem;
+      height: 0.5rem;
+      width: 100%;
     }
 
     &--spacing {
