--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@
 @use '../components/control/Input/Input';
 
 @use '../components/content/Img/Img';
+@use '../components/content/Badge/Badge';
 
 // Trial extra variables, will need moving to tokens
 :root {
