feat!: convert HelpText to a web component evg-help-text

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@
 @use '../components/control/Input/Input';
 
 @use '../components/content/Img/Img';
+@use '../components/content/HelpText/HelpText';
 
 // Trial extra variables, will need moving to tokens
 :root {
