refactor: make evg-help-text text color safe for forest dark theme

--- a/src/components/content/HelpText/HelpText.scss
+++ b/src/components/content/HelpText/HelpText.scss
@@ -2,7 +2,7 @@ evg-help-text {
   --_background-color: var(--evg-state-neutral-light);
 
   background-color: var(--_background-color);
-  color: var(--evg-theme-color);
+  color: var(--evg-color-forest);
   display: block;
   font-size: var(--evg-font-size-sm);
   margin-top: var(--evg-spacing-sm);
