--- a/src/components/react/content/Eyebrow/Eyebrow.module.scss
+++ b/src/components/react/content/Eyebrow/Eyebrow.module.scss
@@ -1,6 +1,6 @@
 .eyebrow {
   color: var(--evg-theme-color-muted);
   font-family: var(--evg-font-family-heading);
-  font-size: var(--evg-font-size-base);
+  font-size: var(--evg-font-size-body-sm);
   text-transform: uppercase;
 }
