--- a/src/styles/mixins/forms.scss
+++ b/src/styles/mixins/forms.scss
@@ -1,106 +1,8 @@
-@mixin input() {
-  background: var(--evg-input-background);
-  border: 1px solid var(--evg-input-border);
-  border-radius: var(--evg-input-border-radius);
-  color: var(--evg-input-color);
-  display: flex;
-  line-height: 1.75;
-  position: relative;
-  transition:
-    border-color var(--evg-transition),
-    background-color var(--evg-transition);
-
-  &:hover {
-    border-color: var(--evg-input-border-hover);
-  }
-
-  &:focus-within {
-    background: var(--evg-input-background-focus);
-    border-color: var(--evg-input-border-focus);
-    outline-color: var(
-      --evg-input-outline-color-focus-webkit,
-      --evg-input-outline-color-focus
-    );
-    outline-offset: var(--evg-input-outline-offset-focus);
-    outline-style: var(--evg-input-outline-style-focus);
-    outline-width: var(--evg-input-outline-width-focus);
-  }
-
-  &--valid {
-    border-color: var(--evg-state-positive);
-  }
-
-  &--invalid {
-    border-color: var(--evg-state-negative);
-  }
-
-  &--pending,
-  &--approved,
-  &--declined {
-    &::before {
-      border-bottom-left-radius: var(--evg-input-border-radius);
-      border-top-left-radius: var(--evg-input-border-radius);
-    }
-  }
-}
-
-@mixin input-disabled() {
-  background: var(--evg-input-background-disabled);
-  color: var(--evg-input-color-disabled);
-  cursor: not-allowed;
-  pointer-events: none;
-}
-
-// It's there but you can't see it
-// We are using the wrapper for the styling so it can be reused
-// on different elements
-@mixin ninja-input() {
-  appearance: none;
-  background: none;
-  border: 0 none;
-  color: inherit;
-  display: block;
-  line-height: var(--evg-font-line-height);
-  width: 100%;
-
-  &:focus {
-    outline: none;
-  }
-}
-
-@mixin input-padding() {
-  min-height: var(--evg-spacing-thumb);
-  padding: var(--evg-input-padding);
-}
-
-// Radios/checkboxes
-@mixin checked() {
-  background: var(--evg-color-white);
-  color: var(--evg-input-checked);
-}
-
-@mixin indicator() {
-  align-items: center;
-  border: 2px solid currentColor;
-  display: inline-flex;
-  flex-shrink: 0;
-  height: var(--evg-font-size-lg);
-  justify-content: center;
-  margin-right: var(--evg-spacing-sm);
-  margin-top: var(--evg-spacing-xs);
-  position: relative;
-  transition:
-    background var(--evg-transition),
-    border-color var(--evg-transition),
-    color var(--evg-transition);
-  width: var(--evg-font-size-lg);
-}
-
 @mixin label() {
   align-items: center;
   color: var(--evg-theme-color);
   display: flex;
-  font-size: var(--evg-font-size-base);
+  font-size: var(--evg-font-size-body-sm);
   font-weight: var(--evg-font-weight-bold);
   min-height: var(--evg-spacing-thumb);
 }
