docs: apply icon to showroom

--- a/src/components/content/Icon/Icon.scss
+++ b/src/components/content/Icon/Icon.scss
@@ -1,6 +1,6 @@
 evg-icon {
   align-items: baseline;
-  color: var(--evg-theme-color);
+  color: inherit;
   display: inline-flex;
   height: var(--evg-icon-size);
   min-width: var(--evg-icon-size);
