--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @use '../components/composition/Meta/Meta';
 @use '../components/composition/Wrap/Wrap';
 
+@use '../components/canvas/Alert/Alert';
 @use '../components/canvas/Box/Box';
 @use '../components/canvas/Box/BoxSection';
 @use '../components/canvas/Card/Card';
