--- a/.storybook/styles.scss
+++ b/.storybook/styles.scss
@@ -1,3 +1,3 @@
 $evg-font-path: '../src/assets/fonts';
-@import '../src/styles/main';
-@import '../src/styles/fonts';
+@use '../src/styles/main';
+@use '../src/styles/fonts';
