--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
-@use '~normalize.css/normalize';
-@use '~@wrap.ngo/tokens/dist';
+@use 'normalize.css/normalize';
+@use '@wrap.ngo/tokens/dist';
 
 @use 'base/scaffolding';
 @use 'base/typography';
