--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,8 @@
 
 @use '../components/control/Button/Button';
 @use '../components/control/Input/Input';
+@use '../components/control/MenuItem/MenuItem';
+@use '../components/control/MenuItem/MenuItemContent';
 @use '../components/control/RadioCheckbox/RadioCheckbox';
 
 @use '../components/content/Badge/Badge';
