--- a/.storybook/styles.scss
+++ b/.storybook/styles.scss
@@ -1,3 +1,4 @@
-$evg-font-path: '../src/assets/fonts';
 @use '../src/styles/main';
-@use '../src/styles/fonts';
+@use '../src/styles/fonts' with (
+  $evg-font-path: '../src/assets/fonts'
+);
