--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,4 @@
-// Set a default font path which works for dependants (this gets overridden by the Storybook SASS so it resolves correctly)
+// Set a default font path which works for dependants
 $evg-font-path: '~@wrap.ngo/evergreen/src/assets/fonts' !default;
 
 // Optional font import
