docs: add menu item to showroom

--- a/src/components/content/HelpText/HelpText.scss
+++ b/src/components/content/HelpText/HelpText.scss
@@ -4,7 +4,7 @@ evg-help-text {
   background-color: var(--_background-color);
   color: var(--evg-color-forest);
   display: block;
-  font-size: var(--evg-font-size-sm);
+  font-size: var(--evg-font-size-body-sm);
   padding: var(--evg-spacing-sm) var(--evg-spacing-md);
 
   &[type='positive'] {
