--- a/src/components/control/Link/Link.scss
+++ b/src/components/control/Link/Link.scss
@@ -1,5 +1,5 @@
 evg-link {
-  --evg-link-text-decoration: var(--evg-theme-link-text-decoration);
+  --evg-link-text-decoration: none;
 
   a,
   button {
