--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,6 +32,103 @@
 @use '../components/control/RadioCheckbox/RadioCheckbox';
 
 @use '../components/content/Badge/Badge';
+@use '../components/content/Divider/Divider';
 @use '../components/content/HelpText/HelpText';
 @use '../components/content/Icon/Icon';
 @use '../components/content/Img/Img';
+
+:root {
+  --evg-font-size-body-xs: clamp(
+    var(--evg-font-size-12),
+    calc(var(--evg-font-size-12) + ((100vw - 320px) * 0.004)),
+    var(--evg-font-size-14)
+  );
+  --evg-font-size-body-sm: clamp(
+    var(--evg-font-size-14),
+    calc(var(--evg-font-size-14) + ((100vw - 320px) * 0.004)),
+    var(--evg-font-size-16)
+  );
+  --evg-font-size-body-md: clamp(
+    var(--evg-font-size-16),
+    calc(var(--evg-font-size-16) + ((100vw - 320px) * 0.009)),
+    var(--evg-font-size-20)
+  );
+  --evg-font-size-body-lg: clamp(
+    var(--evg-font-size-20),
+    calc(var(--evg-font-size-20) + ((100vw - 320px) * 0.009)),
+    var(--evg-font-size-24)
+  );
+  --evg-font-size-body-xl: clamp(
+    var(--evg-font-size-24),
+    calc(var(--evg-font-size-24) + ((100vw - 320px) * 0.018)),
+    var(--evg-font-size-32)
+  );
+
+  --evg-font-size-heading-xxs: clamp(
+    var(--evg-font-size-14),
+    calc(var(--evg-font-size-14) + ((100vw - 320px) * 0)),
+    var(--evg-font-size-14)
+  );
+  --evg-font-size-heading-xs: clamp(
+    var(--evg-font-size-16),
+    calc(var(--evg-font-size-16) + ((100vw - 320px) * 0)),
+    var(--evg-font-size-16)
+  );
+  --evg-font-size-heading-sm: clamp(
+    var(--evg-font-size-20),
+    calc(var(--evg-font-size-20) + ((100vw - 320px) * 0.009)),
+    var(--evg-font-size-24)
+  );
+  --evg-font-size-heading-md: clamp(
+    var(--evg-font-size-24),
+    calc(var(--evg-font-size-24) + ((100vw - 320px) * 0.018)),
+    var(--evg-font-size-32)
+  );
+  --evg-font-size-heading-lg: clamp(
+    var(--evg-font-size-32),
+    calc(var(--evg-font-size-32) + ((100vw - 320px) * 0.045)),
+    var(--evg-font-size-52)
+  );
+  --evg-font-size-heading-xl: clamp(
+    var(--evg-font-size-40),
+    calc(var(--evg-font-size-40) + ((100vw - 320px) * 0.054)),
+    var(--evg-font-size-64)
+  );
+
+  --evg-font-size-display-sm: clamp(
+    var(--evg-font-size-40),
+    calc(var(--evg-font-size-40) + ((100vw - 320px) * 0.089)),
+    var(--evg-font-size-80)
+  );
+  --evg-font-size-display-md: clamp(
+    var(--evg-font-size-52),
+    calc(var(--evg-font-size-52) + ((100vw - 320px) * 0.098)),
+    var(--evg-font-size-96)
+  );
+  --evg-font-size-display-lg: clamp(
+    var(--evg-font-size-64),
+    calc(var(--evg-font-size-64) + ((100vw - 320px) * 0.125)),
+    var(--evg-font-size-120)
+  );
+}
+
+// @media (width >= 1024px) {
+//   :root {
+//     --evg-font-size-body-xs: var(--evg-font-size-14);
+//     --evg-font-size-body-sm: var(--evg-font-size-16);
+//     --evg-font-size-body-md: var(--evg-font-size-20);
+//     --evg-font-size-body-lg: var(--evg-font-size-24);
+//     --evg-font-size-body-xl: var(--evg-font-size-32);
+
+//     --evg-font-size-heading-xxs: var(--evg-font-size-14);
+//     --evg-font-size-heading-xs: var(--evg-font-size-16);
+//     --evg-font-size-heading-sm: var(--evg-font-size-24);
+//     --evg-font-size-heading-md: var(--evg-font-size-32);
+//     --evg-font-size-heading-lg: var(--evg-font-size-52);
+//     --evg-font-size-heading-xl: var(--evg-font-size-64);
+
+//     --evg-font-size-display-sm: var(--evg-font-size-80);
+//     --evg-font-size-display-md: var(--evg-font-size-96);
+//     --evg-font-size-display-lg: var(--evg-font-size-120);
+//   }
+// }
